# MISW4406_202514_Alpes_Partners

./: .gitignore  BFF_CSaaS_Saga_Collection.postman_collection.json  README.md  README_BFF_SAGA.md  docker-compose.yml  pyproject.toml  semana2-punto1.cml
afiliados-comisiones-servicio/: Dockerfile  MEJORAS_IMPLEMENTADAS.md  README.md  afilidados-comisiones-requirements.txt  afilidados-comisiones.Dockerfile  docker-compose.yml  requirements.txt
afiliados-comisiones-servicio/src/app/: main.py
afiliados-comisiones-servicio/src/application/: commands.py  handlers.py  queries.py  services.py
afiliados-comisiones-servicio/src/domain/: entities.py  events.py
bff-service/: bff-requirements.txt  bff.Dockerfile
colaboraciones-servicio/: colaboraciones-requirements.txt  colaboraciones-servicio-requirements.txt  colaboraciones-servicio.Dockerfile  colaboraciones.Dockerfile
colaboraciones-servicio copy/: colaboraciones.Dockerfile
colaboraciones-servicio copy/src/: main.py
colaboraciones-servicio-new/tests/: test_repositorio_colaboraciones.py
colaboraciones-servicio/src/: main.py
colaboraciones-servicio/tests/: test_colaboraciones_api.py  test_crear_colaboracion_handler.py  test_crear_colaboracion_handler_integration.py
experiments/: observability_experiment.py  performance_experiment.py  resilience_experiment.py  run_all_experiments.py
lealtad-contenido-servicio/: README.md  lealtad-contenido-requirements.txt  lealtad-contenido.Dockerfile
monitoreo-servicio/: README.md  monitoreo.Dockerfile
semana2/: semana2-punto1.cml  semana2-punto2.cml
(+138 files in other folders)
